--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <script src="script.js" defer></script>
   </head>  
   <body>
-    <div id="playtime" class="wrapper">
+    <div id="animalgame" class="wrapper">
       <div class="hero">
         <div class="hero-content">
-          <h1>About Playtime</h1>
+          <h1>About Animal Card Game</h1>
           <p>
             Kids animal matching card game.
           </p>
@@ -34,7 +34,7 @@
       <div id="animal-cards" class="bg-lightblue">
       </div>   
       
-    </div> <!-- #playtime -->
+    </div> <!-- #animalgame -->
     
     <footer class="footer">
        <p>Copyright &copy; 2020</p>
