--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     
     <!-- import the webpage's javascript file -->
-    <script src="script.js" defer></script>
+    <script src="scripts.js" defer></script>
   </head>  
   <body>
     <div id="animalgame" class="wrapper">
@@ -18,7 +18,7 @@
         <div class="hero-content">
           <h1>About Animal Card Game</h1>
           <p>
-            Kids animal matching card game.
+            A fun kids matching card game!
           </p>
           <p>
             <button onclick="playAnimalCardGame()" class="playBtn">
